--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,7 +32,6 @@ dependencies:
     sdk: flutter
 
   google_nav_bar: ^5.0.6
-  tridimensional_drawer: ^0.1.1
 
 
 
@@ -41,6 +40,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   get: ^4.6.5
   logger: ^1.3.0
+  hidden_drawer_menu: ^3.0.1
 
 dev_dependencies:
   flutter_test:
