--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,8 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.0.0-417.2.beta <4.0.0'
-
+  sdk: '>=2.18.2 <3.0.0'
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
 # consider running `flutter pub upgrade --major-versions`. Alternatively,
@@ -41,7 +40,6 @@ dependencies:
   font_awesome_flutter:
   get: ^4.6.5
   logger: ^1.3.0
-  hidden_drawer_menu: ^3.0.1
 
 dev_dependencies:
   flutter_test:
